--- a/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_13강_그리디_알고리즘_유형_문제_풀이.ipynb
+++ b/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_13강_그리디_알고리즘_유형_문제_풀이.ipynb
@@ -6,7 +6,7 @@
         "id": "u-Rvt5TJfqk4"
       },
       "source": [
-        "[이것이 코딩테스트다](https://www.youtube.com/watch?v=INg6kdOEEVc&list=PLVsNizTWUw7H9_of5YCB0FmsSc-K44y81&index=3)"
+        "[이것이 코딩테스트다]"
       ]
     },
     {
@@ -56,7 +56,7 @@
     {
       "cell_type": "code",
       "source": [
-        "'''\n",
+        "\n",
         "data = input()\n",
         "#첫번째 문자를 숫자로 변경하여 대입\n",
         "result = int(data[0])\n",
@@ -67,8 +67,7 @@
         "        result += num\n",
         "    else:\n",
         "        result *= num\n",
-        "print(result)\n",
-        "'''"
+        "print(result)"
       ],
       "metadata": {
         "colab": {
