--- a/Level-2/괄호_회전하기.ipynb
+++ b/Level-2/괄호_회전하기.ipynb
@@ -112,6 +112,59 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def do_replace(brackets):\n",
+        "    if brackets == \"\":\n",
+        "        return 1\n",
+        "\n",
+        "    cnt = 0\n",
+        "    for pair in [\"()\", \"{}\", \"[]\"]:\n",
+        "        if brackets.find(pair) > -1:\n",
+        "            s_= brackets.replace(pair, \"\")\n",
+        "            return do_replace(s_)   \n",
+        "            cnt+= 1         \n",
+        "    if cnt == 0:\n",
+        "        return 0\n",
+        "\n",
+        "def solution(s):\n",
+        "    tmp_s = s\n",
+        "    answer = 0\n",
+        "    if len(s) % 2 == 1:\n",
+        "        return answer\n",
+        "\n",
+        "    #for i in range(1):\n",
+        "    for i in range(len(s)):\n",
+        "        answer += do_replace(tmp_s)\n",
+        "        tmp_s = tmp_s[1:] + tmp_s[0]\n",
+        "\n",
+        "    return answer\n",
+        "\n",
+        "s= \t\"}]()[{\"\n",
+        "solution(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0_pG1Ap6XIxn",
+        "outputId": "7f1a1092-a3d5-497d-9336-bc8ed9fcd94d"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# 아래는 실패하였다 "
